change training to schedule

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
     <div class="grid">
       <ul>
         <li><a href="/"><i class="fa fa-home"></i>Home</a></li>
-        <li><a href="/training"><i class="fa fa-graduation-cap"></i>Training</a></li>
+        <li><a href="/schedule"><i class="fa fa-graduation-cap"></i>Schedule</a></li>
 		<li><a href="/register"><i class="fa fa-user-plus"></i>Register</a></li>
 	        <li><a href="/local-arrangements"><i class="fa fa-hotel"></i>Local Arrangements</a></li>
 		<li><a href="/contact"><i class="fa fa-envelope-o"></i>Contact</a></li>
