--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
           <meta name="author" content="{{ site.links.github }}">
         {% endif %}
         <meta name="title" content="{{ page.title }}" >
-        <link rel="icon" type="image/png" href="{{site.url}}/download-favicon.png">
+        <link rel="icon" type="image/png" href="{{site.url}}/code-favicon.png">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         {% include ssn.html %}
         <!-- Custom CSS -->
