--- a/_sass/_markdown.scss
+++ b/_sass/_markdown.scss
@@ -46,9 +46,9 @@ h3 {
 	}
 p {
 	margin-top:0;
-	-webkit-hypens:auto;
-	-moz-hypens:auto;
-	hyphens:auto;
+	-webkit-hyphens:none;
+	-moz-hyphens:none;
+	hyphens:none;
 	}
 ul {
 	list-style: square;
