--- a/_sass/_markdown.scss
+++ b/_sass/_markdown.scss
@@ -1,7 +1,8 @@
-@import url(http://fonts.googleapis.com/css?family=Vollkorn:400,400italic,700,700italic&subset=latin);
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
 
 body {
-	font: 1.3em "Vollkorn", Palatino, Times;
+	font: 1.3em 'Open Sans', sans-serif;
 	color: #333;
 	line-height: 1.4;
 	text-align: justify;
