--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
 		<li><a href="/register"><i class="fa fa-user-plus"></i>Register</a></li>
 	        <li><a href="/local-arrangements"><i class="fa fa-hotel"></i>Local Arrangements</a></li>
 		<li><a href="/contact"><i class="fa fa-envelope-o"></i>Contact</a></li>
-	        <li><a href="/feedback"><i class="fa fa-commenting"></i>Feedback</a></li>
+	        <li><a href="/feedback"><i class="fa fa-comment"></i>Feedback</a></li>
       </ul>
     </div>
   </nav>
