--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,11 +6,12 @@
     <div class="grid">
       <ul>
         <li><a href="/"><i class="fa fa-home"></i>Home</a></li>
-        	<li><a href="/schedule"><i class="fa fa-graduation-cap"></i>Schedule</a></li>
-		<li><a href="/register"><i class="fa fa-user-plus"></i>Register</a></li>
-	        <li><a href="/local-arrangements"><i class="fa fa-hotel"></i>Local Arrangements</a></li>
+        	<!-- <li><a href="/schedule"><i class="fa fa-graduation-cap"></i>Schedule</a></li> -->
+		<!-- <li><a href="/register"><i class="fa fa-user-plus"></i>Register</a></li> -->
+	        <!-- <li><a href="/local-arrangements"><i class="fa fa-hotel"></i>Local Arrangements</a></li> -->
 		<li><a href="/contact"><i class="fa fa-envelope-o"></i>Contact</a></li>
 	        <li><a href="/feedback"><i class="fa fa-comment"></i>Feedback</a></li>
+	        <li><a href="/previous-workshops"><i class="fa fa-times"></i>Previous Workshops</a></li>
       </ul>
     </div>
   </nav>
