--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
 	        <!-- <li><a href="/local-arrangements"><i class="fa fa-hotel"></i>Local Arrangements</a></li> -->
 		<li><a href="/contact"><i class="fa fa-envelope-o"></i>Contact</a></li>
 	        <li><a href="/feedback"><i class="fa fa-comment"></i>Feedback</a></li>
-	        <li><a href="/previous-workshops"><i class="fa fa-times"></i>Previous Workshops</a></li>
+	        <li><a href="/previous-workshops"><i class="fa fa-clock-o"></i>Previous Workshops</a></li>
       </ul>
     </div>
   </nav>
