--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,6 +12,7 @@
 		<li><a href="/contact"><i class="fa fa-envelope-o"></i>Contact</a></li>
 	        <li><a href="/feedback"><i class="fa fa-comment"></i>Feedback</a></li>
 	        <li><a href="/previous"><i class="fa fa-clock-o"></i>Previous Workshops</a></li>
+	      	<li><a href="/resources"><i class="fa fa-link"></i>Links & Resources</a></li>
       </ul>
     </div>
   </nav>
