--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 ---
-<div id="home" class="grid post">
-	<div class="unit whole">
-		{{ content }}
-	</div>
+<div class="post-container">
+    <div class="post">
+        {{ content }}
+    </div>
 </div>
