--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,12 +8,13 @@
 		<section class="about">
 			<a href="{{ site.url }}"><img src="{{ "/assets/r-logo.png" | relative_url }}" alt="{{ site.name }}"></a>
 			<a href="{{ site.url }}"><h2>{{ site.title }}</h2></a>
-			<!--<p class="tagline">{{ site.tagline }}</p><-->
+			<p class="tagline">{{ site.tagline }}</p>
 			<ul class="side-menu">
 				<li><a href="/register">Register</a></li>
 				<li><a href="/schedule">Schedule</a></li>
 				<li><a href="/local">Local Arrangements</a></li>
 				<li><a href="/previous">Previous Workshops</a></li>
+				<li><a href="/contact">Contact</a></li>
 			</ul>
 			<ul class="social">
 				<a href="https://github.com/{{ site.social_links.github }}"><li><i class="icon-github-circled"></i></li></a>
